--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" class="antialiased">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>Nabil | Builder of Systems</title>
+  <link rel="icon" type="image/png" href="/nosh-logo.png" />
+  <meta name="description"
+    content="Nosh AI - Autonomous orchestration layers, neural logic gates, and high-frequency data pipelines. Architecting the future of intelligent systems." />
+  <meta property="og:title" content="Nabil | Builder of Systems" />
+  <meta property="og:description"
+    content="Nosh AI - Autonomous orchestration layers, neural logic gates, and high-frequency data pipelines. Architecting the future of intelligent systems." />
+  <meta property="og:image" content="/nosh-logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <script>
     tailwind.config = {
       darkMode: 'class',
@@ -42,14 +52,41 @@
     }
   </script>
   <style>
-    :root { --bg-color: #ffffff; --text-color: #1d1d1f; }
-    .dark { --bg-color: #000000; --text-color: #f5f5f7; }
-    body { background-color: var(--bg-color); color: var(--text-color); transition: background-color 0.5s ease; overflow-x: hidden; }
-    .glass { background: rgba(255, 255, 255, 0.72); backdrop-filter: saturate(180%) blur(20px); -webkit-backdrop-filter: saturate(180%) blur(20px); }
-    .dark .glass { background: rgba(0, 0, 0, 0.72); }
-    ::-webkit-scrollbar { display: none; }
-    .no-scrollbar::-webkit-scrollbar { display: none; }
-    
+    :root {
+      --bg-color: #ffffff;
+      --text-color: #1d1d1f;
+    }
+
+    .dark {
+      --bg-color: #000000;
+      --text-color: #f5f5f7;
+    }
+
+    body {
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: background-color 0.5s ease;
+      overflow-x: hidden;
+    }
+
+    .glass {
+      background: rgba(255, 255, 255, 0.72);
+      backdrop-filter: saturate(180%) blur(20px);
+      -webkit-backdrop-filter: saturate(180%) blur(20px);
+    }
+
+    .dark .glass {
+      background: rgba(0, 0, 0, 0.72);
+    }
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
     .bg-gradient-brand {
       background: linear-gradient(135deg, #B153D7, #FF00FF);
     }
@@ -71,9 +108,9 @@
   </style>
 
   <script type="text/javascript">
-    (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-    Cal("init", "30-minutes-meeting", {origin:"https://app.cal.com"});
-    Cal.ns["30-minutes-meeting"]("ui", {"hideEventTypeDetails":true,"layout":"month_view"});
+      (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if (typeof namespace === "string") { cal.ns[namespace] = cal.ns[namespace] || api; p(cal.ns[namespace], ar); p(cal, ["initNamespace", namespace]); } else p(cal, ar); return; } p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
+    Cal("init", "30-minutes-meeting", { origin: "https://app.cal.com" });
+    Cal.ns["30-minutes-meeting"]("ui", { "hideEventTypeDetails": true, "layout": "month_view" });
   </script>
 
   <script type="importmap">
@@ -91,8 +128,10 @@
 }
 </script>
 </head>
+
 <body>
   <div id="root"></div>
   <script type="module" src="./src/index.tsx"></script>
 </body>
+
 </html>
