feat: Add Hero component with dynamic UI and introduce application constants.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <title>Nabil | Builder of Systems</title>
+  <title>NOSH AI | Autonomous Systems</title>
   <link rel="icon" type="image/png" href="/nosh-logo.png" />
   <meta name="description"
     content="Nosh AI - Autonomous orchestration layers, neural logic gates, and high-frequency data pipelines. Architecting the future of intelligent systems." />
-  <meta property="og:title" content="Nabil | Builder of Systems" />
+  <meta property="og:title" content="NOSH AI | Autonomous Systems" />
   <meta property="og:description"
     content="Nosh AI - Autonomous orchestration layers, neural logic gates, and high-frequency data pipelines. Architecting the future of intelligent systems." />
   <meta property="og:image" content="/nosh-logo.png" />
