--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>NOSH AI | Autonomous Systems</title>
-  <link rel="icon" type="image/png" href="/nosh-logo.png" />
+  <link rel="icon" type="image/webp" href="/nosh-logo.webp" />
+  <link rel="preload" as="image" href="/nosh-logo.webp" type="image/webp" />
   <meta name="description"
     content="Nosh AI - Autonomous orchestration layers, neural logic gates, and high-frequency data pipelines. Architecting the future of intelligent systems." />
   <meta property="og:title" content="NOSH AI | Autonomous Systems" />
   <meta property="og:description"
     content="Nosh AI - Autonomous orchestration layers, neural logic gates, and high-frequency data pipelines. Architecting the future of intelligent systems." />
-  <meta property="og:image" content="/nosh-logo.png" />
+  <meta property="og:image" content="/nosh-logo.webp" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
