feat: Initialize portfolio website with core UI components and update README branding.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <title>NOSH AI | Autonomous Systems</title>
+  <title>Bilal Zindani | Portfolio</title>
   <link rel="icon" type="image/webp" href="/nosh-logo.webp" />
   <link rel="preload" as="image" href="/nosh-logo.webp" type="image/webp" />
   <meta name="description"
-    content="Nosh AI - Autonomous orchestration layers, neural logic gates, and high-frequency data pipelines. Architecting the future of intelligent systems." />
-  <meta property="og:title" content="NOSH AI | Autonomous Systems" />
+    content="Bilal Zindani - Portfolio showcasing autonomous systems, neural logic, and high-frequency data pipelines." />
+  <meta property="og:title" content="Bilal Zindani | Portfolio" />
   <meta property="og:description"
-    content="Nosh AI - Autonomous orchestration layers, neural logic gates, and high-frequency data pipelines. Architecting the future of intelligent systems." />
+    content="Bilal Zindani - Portfolio showcasing autonomous systems, neural logic, and high-frequency data pipelines." />
   <meta property="og:image" content="/nosh-logo.webp" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
